--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     -->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gregory Benko</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="main.css">
